--- a/src/style.css
+++ b/src/style.css
@@ -98,3 +98,11 @@ section {
     border-radius: 2px;
     font-weight: bold;
 }
+
+.box {
+    height: 100px;
+    width: 100px;
+    border: 1px solid black;
+    display: inline-block;
+    margin-right: 4px;
+}
