change card--image 100% width

--- a/src/style.css
+++ b/src/style.css
@@ -65,7 +65,8 @@ section {
 }
 
 .card--image {
-    /* width: 100%; */
+    width: 100%;
+    padding: 10%;
     border-radius: 9px;
     margin-bottom: 9px;
 }
