--- a/src/style.css
+++ b/src/style.css
@@ -108,3 +108,19 @@ section {
     margin-right: 4px;
     border-radius: 5px;
 }
+
+input {
+    margin-bottom: 15px;
+    height: 30px;
+    text-indent: 10px;
+    border: 1px solid #444;
+    border-radius: 5px;
+    display: block;
+}
+
+textarea {
+    margin-bottom: 15px;
+    border: 1px solid #444;
+    border-radius: 5px;
+    display: block;
+}
