--- a/src/style.css
+++ b/src/style.css
@@ -109,13 +109,17 @@ section {
     border-radius: 5px;
 }
 
-input {
+input [type = "text"], input [type = "email"]{
     margin-bottom: 15px;
     height: 30px;
     text-indent: 10px;
     border: 1px solid #444;
     border-radius: 5px;
     display: block;
+}
+
+input [type = "checkbox"], input[type = "radio"]{
+    margin-right: 0.75rem;
 }
 
 textarea {
